@@ -1,3 +1,6 @@
+Nov 26, 2019
+  rat genes are loaded regardless of presence of sequences
+
 Nov 25, 2019
   updated script for loading mitochondrial genes
 
